Removed Java 11 warnings.