@@ -188,11 +188,11 @@ public class VisualizationTask extends AbstractTask {
 					values.add(val);
 				} else {
 					if(this.attributesType == Integer.class) {
-						values.add(new Integer(0));
+						values.add(Integer.valueOf(0));
 					} else if(this.attributesType == Long.class) {
-						values.add(new Long(0));
+						values.add(Long.valueOf(0));
 					} else if(this.attributesType == Double.class) {
-						values.add(new Double(0.0));
+						values.add(Double.valueOf(0.0));
 					} else {
 						values.add("");
 					}
